--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,6 +32,17 @@
       
     </style>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40106697-1', 'follow-rugby.com');
+  ga('send', 'pageview');
+
+</script>
+
 <script language="javascript"> 
           function move(tbFrom, tbTo, added) 
             {
@@ -105,6 +116,18 @@
             for (var i=0; i<selObj.options.length; i++) {
               selObj.options[i].selected = true;
             }
+          }
+          
+          function validateForm() 
+          {
+          	var counter = document.getElementById("counter").innerHTML;
+          	if(counter != 37) {
+          		alert("You have not chosen 37 players.");
+          		return false;
+          	} else {
+          		selectAllOptions('props');selectAllOptions('hookers');selectAllOptions('locks');selectAllOptions('backRows');selectAllOptions('scrumHalfs');selectAllOptions('flyHalfs');selectAllOptions('centres');selectAllOptions('wings');selectAllOptions('fullBacks');
+          		return true;
+          	}
           }
       </script>
 </head>
