Fixed bug where the links to the matces were not going to the correct match.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -23,10 +23,13 @@
     <p>On game day the Match Centre shows live international and club rugby Twitter updates for both teams and the match #hashtag so you can easily join in the conversation.</p>
 
     <p>Interact as you would on Twitter and please contact <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> if you have any comments or suggestions!</p>
-    <br></br>
-    <p class="text-center"><strong>More Rugby to Follow.</strong></p>
     <br>
+    
+    <div class="well"><p class="text-center">Please enter our British and Irish Lions competition <a href="@routes.Application.competition">here</a>. The closest <strong>two entrants</strong> to guessing Warren Gatland’s squad will each receive an <strong>official Adidas 2013 British and Irish Lions shirt!</strong></p></div>
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
+    <br></br>
+    <br></br>
+<p class="text-center"><strong>More Rugby to Follow.</strong></p>
     
 
   </div>
