--- a/app/views/matchCentre.scala.html
+++ b/app/views/matchCentre.scala.html
@@ -44,7 +44,7 @@
    <a name="game@game.game.team1Id"></a>
 <div class="well">
            <p class="lead text-center">@strDate(game.game.gameDate) @@@game.game.time</p>
-           <h3 class="text-center">@game.team1.name V @game.team2.name</h3>
+           <h3 class="text-center">@game.team1.name v @game.team2.name</h3>
          </div>
   </div>
 </div>
