--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -25,7 +25,9 @@
     <p>Interact as you would on Twitter and please contact <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> if you have any comments or suggestions!</p>
     <br>
     
-    <div class="well"><p class="text-center">Please enter our British and Irish Lions competition <a href="@routes.Application.competition">here</a>. The closest <strong>two entrants</strong> to guessing Warren Gatland’s squad will each receive an <strong>official Adidas 2013 British and Irish Lions shirt!</strong></p></div>
+    <div class="well"><p class="text-center">Please enter our British and Irish Lions competition <a href="@routes.Application.competition">here</a>. The closest <strong>two entrants</strong> to guessing Warren Gatland’s squad will each receive an <strong>official Adidas 2013 British and Irish Lions shirt!</strong></p>
+<br></br>
+<p class="text-center"><strong>(Competition closes Thursday April 25th 10pm BST)</strong></p></div>
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
     <br></br>
     <br></br>
