--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -1,4 +1,4 @@
-@(category: Category)(teams: Seq[models.Team])(team: Option[models.Team])(players: Seq[models.Member])(widget: Option[models.Widget])
+@(category: Category)(teams: Seq[models.Team])(team: Option[models.Team])(players: Seq[models.Member])(widget: Option[models.Widget])(searchWidget: Option[models.Widget])
 
 @import models.Linker._
 
@@ -62,6 +62,12 @@
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
   }
+  
+@searchWidget.map { w =>    
+        <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?@{w.url}" data-widget-id="@w.id"></a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+     }
   </div>
   </div>
 }
