--- a/app/views/admin/tables.scala.html
+++ b/app/views/admin/tables.scala.html
@@ -4,7 +4,7 @@
   <ul>
     <li><a href="">Category</a></li>
     <li><a href="@routes.Administrator.teamList(0, 2, "")">Team</a></li>
-    <li><a href="@routes.Administrator.memberList(0, 2, "")">Member</a></li>
+    <li><a href="@routes.Members.memberList(0, 2, "")">Member</a></li>
     <li><a href="@routes.Administrator.widgetList(0, 2, "")">Widget</a></li>
   <li><a href="@routes.Administrator.gameList(0, 2)">Match Centre</a></li>
   </ul>
