Refactored for Teams too.

--- a/app/views/admin/tables.scala.html
+++ b/app/views/admin/tables.scala.html
@@ -3,7 +3,7 @@
   <h1>Tables</h1>
   <ul>
     <li><a href="">Category</a></li>
-    <li><a href="@routes.Administrator.teamList(0, 2, "")">Team</a></li>
+    <li><a href="@routes.Teams.teamList(0, 2, "")">Team</a></li>
     <li><a href="@routes.Members.memberList(0, 2, "")">Member</a></li>
     <li><a href="@routes.Administrator.widgetList(0, 2, "")">Widget</a></li>
   <li><a href="@routes.Administrator.gameList(0, 2)">Match Centre</a></li>
