--- a/app/views/admin/teams/createTeam.scala.html
+++ b/app/views/admin/teams/createTeam.scala.html
@@ -1,14 +1,15 @@
-@(id: Int)(teamForm: Form[TeamMembers])(categories: Seq[(String, String)])(teamMembers: Seq[Member])(allOtherMembers: Seq[Member])
+@(teamForm: Form[TeamMembers])(categories: Seq[(String, String)])(allOtherMembers: Seq[Member])
 
 @import helper._
+@import views.html.admin.main
 
 @implicitFieldConstructor = @{ FieldConstructor(twitterBootstrapInput.f) }
 
 @main {
-  <h1>Edit Team</h1>
+  <h1>Create Team</h1>
 
     
-    @form(action = routes.Administrator.updateTeam(id), 'onsubmit -> "selectAllOptions('members');") {
+    @form(action = routes.Teams.saveTeam, 'onsubmit -> "selectAllOptions('members');") {
         
         <fieldset>
         
@@ -41,9 +42,7 @@
             </td>
             <td>
               <select multiple="multiple" size="50" id="members" name="members[]" style="width:150">
-                @teamMembers.sortWith((a,b) => a.name.compareTo(b.name) < 0).map { member =>
-                  <option value="@member.id">@member.name</option>
-                }
+               
               </select>
             </td>
           </tr>
@@ -51,13 +50,9 @@
         
         <div class="actions">
             <input type="submit" value="Save this team" class="btn primary"> or 
-            <a href="@routes.Administrator.teamList(0, 2, "")" class="btn">Cancel</a> 
+            <a href="@routes.Teams.teamList(0, 2, "")" class="btn">Cancel</a> 
         </div>
         
     }
     
-    @form(routes.Administrator.deleteTeam(id), 'class -> "topRight") {
-        <input type="submit" value="Delete this team" class="btn danger">
-    }
-  
 }
