--- a/app/views/admin/widgets/createWidget.scala.html
+++ b/app/views/admin/widgets/createWidget.scala.html
@@ -1,13 +1,14 @@
 @(widgetForm: Form[Widget])
 
 @import helper._
+@import views.html.admin.main
 
 @implicitFieldConstructor = @{ FieldConstructor(twitterBootstrapInput.f) }
 
 @main {
   <h1>Create Widget</h1>
     
-    @form(routes.Administrator.saveWidget) {
+    @form(routes.Widgets.saveWidget) {
         
         <fieldset>
             @inputText(widgetForm("id"), '_label -> "id")
@@ -20,7 +21,7 @@
         
         <div class="actions">
             <input type="submit" value="Save this widget" class="btn primary"> or 
-            <a href="@routes.Administrator.widgetList(0, 2, "")" class="btn">Cancel</a> 
+            <a href="@routes.Widgets.widgetList(0, 2, "")" class="btn">Cancel</a> 
         </div>
         
     }
