Added new graphics.

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -12,7 +12,7 @@
     <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.**</p>
 
     <br>
-    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
+    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo1.png")"></img></div><div class="span3"></div>
     <br></br>
     <br></br>
     <p><small>*We cannot guarantee that all teams will publish updates for all matches but the official accounts of club and international sides are increasingly Tweeting during games – it is a great way to follow the action.</small></p>
