--- a/app/views/comingSoon.scala.html
+++ b/app/views/comingSoon.scala.html
@@ -17,7 +17,7 @@
     <p>If you know of multiple accounts for any of the above sections please contact us using the following e-mail address <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.</p>
     <br></br>
    
-    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
+    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo1.png")"></img></div><div class="span3"></div>
   </div>
   
 
