--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -50,7 +50,7 @@
 <div class="row">
       <div class="span12">
         <div class="titleimage">
-        <a href="@routes.Application.index"><img src="@routes.Assets.at("images/title1.png")" padding-bottom></img></a>
+        <a href="@routes.Application.index"><img src="@routes.Assets.at("images/logo2.png")" padding-bottom></img></a>
         </div>
       </div>
     </div>
