--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -25,7 +25,7 @@
     <p>Interact as you would on Twitter and please contact <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> if you have any comments or suggestions!</p>
     <br>
     
-    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
+    <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo1.png")"></img></div><div class="span3"></div>
     <br></br>
     <br></br>
     <p class="text-center"><strong>More Rugby to Follow.</strong></p>
