Small changes to text and menus.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,13 +16,22 @@
             <strong>Oops!</strong> @message
         </div>
     }
-    <p class="lead">Follow Rugby lists rugby Twitter accounts in relevant categories and displays their real time updates on each page.</p>
-
-    <p>Click on the headings above to see the latest Tweets of top players, clubs, national unions, journalists, broadcasters, retired players and other major names in rugby.</p>
     
-    <p>On game day the Match Centre shows live international and club rugby Twitter updates for both teams and the match #hashtag so you can easily join in the conversation.</p>
-
-    <p>Interact as you would on Twitter and please contact <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> if you have any comments or suggestions!</p>
+    <p class="lead">Follow Rugby shows the best #rugby Twitter content with profiles grouped in relevant categories.</p>
+    <table border=0>
+    <tr><td valign="top" width=100>
+    <p><strong>Match Centre</strong></td><td>Tweets from both sides during games and the match #hashtag conversation so you can join in.</p></td></tr>
+    <tr><td valign="top">
+    <p><strong>International</strong></td><td>The top International teams and players on Twitter.</p></td></tr>
+    <tr><td valign="top">
+    <p><strong>Club Rugby</strong></td><td>Aviva Premiership, RaboDirect PRO12, Super 15, Top 14 teams and players on Twitter.</p></td></tr>
+    <tr><td valign="top">
+    <p><strong>More Rugby</strong></td><td>Retired players, Rugby journalists, broadcasters and many more profiles to Follow.</p></td></tr>
+    <tr><td valign="top">
+    <p><strong>#rugbyunited</strong></td><td>The hugely popular #rugbyunited community, all their profiles in one section.</p></td></tr>
+    </table>
+    <br></br>
+    <p class="text-center"><strong>Tweet <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> if you have any comments or suggestions!</strong></p>
     <br>
     
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo1.png")"></img></div><div class="span3"></div>
@@ -37,7 +46,7 @@
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_linkedin_large' displayText='LinkedIn'></span>
 <span class='st_email_large' displayText='Email'></span>
-		<div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?q=%23rugby" data-widget-id="277844769160429571">Tweets about "#rugby"</a></div>
+		<div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/FollowRugbySite" data-widget-id="320940036453449730"></a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 	</div>
