--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -1,11 +1,11 @@
-@(category: Category)(teams: Seq[models.Team])(team: Option[models.Team])(players: Seq[models.Member])(widget: Option[models.Widget])(searchWidget: Option[models.Widget])
+@(category: Category)(teams: Seq[models.Team])(team: Option[models.Team])(players: Seq[models.Member])(media: Media)
 
 @import models.Linker._
 
 @main("Follow Rugby"){
   
   <script>
-
+@media.vidChannel.map { channel =>
 (function() {
     function createPlayer(jqe, video, options) {
         var ifr = $('iframe', jqe);
@@ -96,10 +96,13 @@
     });
     
 })();
+
         
 $(function() {
-    $('#channelplayer').youTubeChannel({user:'sarriesrugbytv'});
+    $('#channelplayer').youTubeChannel({user:'@channel'});
 });
+
+}
 </script>
 
 	 <div class="row">
@@ -156,13 +159,13 @@ $(function() {
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_linkedin_large' displayText='LinkedIn'></span>
 <span class='st_email_large' displayText='Email'></span>
-  @widget.map { list =>
+  @media.listWidget.map { list =>
     <div class="widget-frame"><a class="twitter-timeline" height="300" href="https://twitter.com/@{list.twitterAccount}/@{list.url}" data-widget-id="@list.id"></a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
   }
   
-@searchWidget.map { w =>    
+@media.searchWidget.map { w =>    
         <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?@{w.url}" data-widget-id="@w.id"></a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
