--- a/app/views/admin/teams/editTeam.scala.html
+++ b/app/views/admin/teams/editTeam.scala.html
@@ -15,6 +15,7 @@
         
             @inputText(teamForm("team")("name"), '_label -> "Team name")
             @inputText(teamForm("team")("twitterName"), '_label -> "Twitter Name")
+            @inputText(teamForm("team")("vidChannel"), '_label -> "Channel Name")
             @select(
                 teamForm("team")("categoryId"), 
                 categories, 
