The position a match appears on the page can now be set.

--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -2,6 +2,10 @@
 
 @import models.Linker._
 
+@height(t: Option[Team]) = @{
+    if(t.isDefined && t.get.vidChannel.isDefined) {300} else {600}
+   }
+
 @main("Follow Rugby"){
   
   <script>
@@ -160,14 +164,20 @@ $(function() {
 <span class='st_facebook_large' displayText='Facebook'></span>
 <span class='st_linkedin_large' displayText='LinkedIn'></span>
 <span class='st_email_large' displayText='Email'></span>
+
+
+
+  
+   
+ 
   @media.listWidget.map { list =>
-    <div class="widget-frame"><a class="twitter-timeline" height="300" href="https://twitter.com/@{list.twitterAccount}/@{list.url}" data-widget-id="@list.id"></a>
+    <div class="widget-frame"><a class="twitter-timeline" height="@height(team)" href="https://twitter.com/@{list.twitterAccount}/@{list.url}" data-widget-id="@list.id"></a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
   }
   
 @media.searchWidget.map { w =>    
-        <div class="widget-frame"><a class="twitter-timeline" height="300" href="https://twitter.com/search?@{w.url}" data-widget-id="@w.id"></a>
+        <div class="widget-frame"><a class="twitter-timeline" height="@height(team)" href="https://twitter.com/search?@{w.url}" data-widget-id="@w.id"></a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
      }
