--- a/app/views/admin/games/gameList.scala.html
+++ b/app/views/admin/games/gameList.scala.html
@@ -45,6 +45,7 @@
                   @header(3, "Away Team")
                   @header(4, "Time")
                   @header(5, "Date")
+                  @header(6, "Pos")
                 </tr>
             </thead>
             <tbody>
@@ -65,6 +66,9 @@
                 	          <td>
                 	              @game.gameDate
                 	          </td>
+                	          <td>
+                                @game.pos
+                            </td>
                         </tr>
                 }
 
