--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -31,7 +31,7 @@
     width:300px;
     height: 240px;
     overflow: hidden;
-    background: gray;
+    background: #454141;
     position: absolute;
     border: solid 2px gray;
 }
@@ -46,9 +46,9 @@
 }
 
 .youtube .thumbnail {
-    margin: 2px;
+    margin: 0px;
     width: 80%;
-    border: 1px solid black;  
+    border: 0px solid black;  
 }
 
 .youtube iframe.player {
