--- a/app/views/admin/teams/editTeam.scala.html
+++ b/app/views/admin/teams/editTeam.scala.html
@@ -16,6 +16,7 @@
             @inputText(teamForm("team")("name"), '_label -> "Team name")
             @inputText(teamForm("team")("twitterName"), '_label -> "Twitter Name")
             @inputText(teamForm("team")("vidChannel"), '_label -> "Channel Name")
+            @inputText(teamForm("team")("videoPlayer"), '_label -> "Video Player (1=YouTube, 2=DailyMotion)")
             @select(
                 teamForm("team")("categoryId"), 
                 categories, 
