--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -1,6 +1,7 @@
 @(category: Category)(teams: Seq[models.Team])(team: Option[models.Team])(players: Seq[models.Member])(media: Media)
 
 @import models.Linker._
+@import models.VideoPlayer
 
 @height(t: Option[Team]) = @{
     if(t.isDefined && t.get.vidChannel.isDefined) {300} else {600}
@@ -9,7 +10,7 @@
 @main("Follow Rugby"){
   
   <script>
-@team.map { t => @t.vidChannel.map { channel =>
+@media.videoPlayerChannel.map { v =>
 (function() {
     function createPlayer(jqe, video, options) {
         var ifr = $('iframe', jqe);
@@ -103,11 +104,11 @@
 
         
 $(function() {
-    $('#channelplayer').youTubeChannel({user:'@channel'});
+    $('#channelplayer').youTubeChannel({user:'@v.channel'});
 });
 
 }
-}
+
 </script>
 
 	 <div class="row">
@@ -168,8 +169,7 @@ $(function() {
 
 
   
-   
- 
+  
   @media.listWidget.map { list =>
     <div class="widget-frame"><a class="twitter-timeline" height="@height(team)" href="https://twitter.com/@{list.twitterAccount}/@{list.url}" data-widget-id="@list.id"></a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -182,10 +182,14 @@ $(function() {
         </div>
      }
  
- @team.map { t => @t.vidChannel.map { channel =>    
+@media.videoPlayerChannel.map { v => 
+  @if(v.player.isInstanceOf[VideoPlayer.YouTube]) {   
      <div id="channelplayer">
         </div>
-        }}
+   } else {
+     <div style="text-align: right;"><iframe id="dm_jukebox_iframe" style="overflow:hidden; margin:0; padding:0; width: 100%; height: 300px;" width="100%" align="center" frameborder="0" marginwidth="0" marginheight="0" src="http://www.dailymotion.com/widget/jukebox?list[]=%2Fuser%2F@{v.channel}%2F1&skin=default&autoplay=0&automute=0"></iframe><a style="font-size: 10px; color: #193D5E; text-decoration: none;" href="http://www.dailymotion.com" target="_blank" title="Powered by Dailymotion"></a></div>
+   }
+  }
   </div>
   </div>
 }
